infrastructure/vault/vault-unsealer/networkpolicy.yaml
# infrastructure/vault/vault-unsealer/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: vault-unsealer
  namespace: vault
spec:
  podSelector:
    matchLabels:
      app: vault-unsealer
  policyTypes:
  - Ingress
  - Egress
  ingress: []
  egress:
  - ports:
    - port: 53
      protocol: UDP
    - port: 53
      protocol: TCP
  - ports:
    - port: 8200
      protocol: TCP
